...
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu_button"/>

        <Button
            android:id="@+id/menu_button"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_marginBottom="0dp"
...
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/feed_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/feed"
            android:text="FEED"
            android:textSize="15dp"
            android:paddingTop="30dp"
            android:textStyle="bold"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/today_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:drawableTop="@drawable/today"
            android:layout_weight="1"
            android:text="TODAY"
            android:paddingTop="30dp"
            android:textSize="15dp"
            android:textStyle="bold"/>

    </LinearLayout>

...
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/people_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="4dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/people"
            android:text="PEOPLE"
            android:paddingTop="30dp"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/habits_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:drawableTop="@drawable/habits"
            android:layout_weight="1"
            android:paddingTop="30dp"
            android:text="HABITS"
            android:textSize="15dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
...
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/history_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:drawableTop="@drawable/history"
            android:paddingTop="30dp"
            android:layout_weight="1"
            android:text="HISTORY"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/notifications_button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:drawableTop="@drawable/notifications"
            android:paddingTop="30dp"
            android:layout_weight="1"
            android:text="NOTIFICATIONS"
            android:textSize="15dp"
            android:textStyle="bold"/>

    </LinearLayout>


...
