...
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/username_input_field"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/user_icon"
...
            android:textColorHint="#999999"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="190dp" />

        <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/gradient"
            android:text="LOGIN"
            android:textAlignment="center"
            android:textColor="#020202"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="285dp" />
...
